[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/Arcade/Parts/HUD_Player_00.gd" type="Script" id=1]
[ext_resource path="res://Menus/Arcade/Parts/HUD_02_VBox_In_Game.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/Arcade/Parts/HUD_00_VBox_In_Game_Over.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/Arcade/Parts/HUD_01_VBox_In_Menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/Arcade/Parts/HUD_03_VBox_In_Score.tscn" type="PackedScene" id=5]

[node name="VBox_Player_01" type="VBoxContainer"]
margin_top = -1.29236
margin_right = 220.0
margin_bottom = 1423.71
rect_min_size = Vector2( 220, 1080 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox_In_Game" parent="." instance=ExtResource( 2 )]
margin_bottom = 555.0

[node name="VBox_In_Menu" parent="." instance=ExtResource( 4 )]
margin_top = 559.0
margin_right = 220.0
margin_bottom = 764.0

[node name="VBox_Game_Over" parent="." instance=ExtResource( 3 )]
margin_top = 768.0
margin_right = 220.0
margin_bottom = 1527.0

[node name="VBox_In_Score" parent="." instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 1531.0
margin_right = 220.0
margin_bottom = 1650.0
